--- a/main.css
+++ b/main.css
@@ -334,3 +334,30 @@ a {
 a:hover {
     color: #797979;
 }
+
+.follow a {
+    font-size: 30px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+  }
+
+  .follow a:hover {
+    font-size: 35px;
+  }
+
+  .instagram:hover {
+    color: #c32aa3;
+  }
+
+  .discord:hover {
+    color: #5865f2;
+  }
+
+  .youtube:hover {
+    color: #ff0000;
+  }
+
+  .tumblr:hover {
+    color: #35465d;
+  }
